// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Instrument a webapp to send telemetry data to Azure Application Insights for observability, monitoring, and diagnostics. USE FOR: add Application Insights, set up telemetry, instrument my app, enable APM, add monitoring to webapp, distributed tracing, track requests and exceptions, send telemetry to Azure. DO NOT USE FOR: querying logs or KQL (use azure-observability), creating alerts or dashboards (use azure-observability), deploying apps (use azure-deploy).",
  "extractedKeywords": [
    "alerts",
    "app service",
    "appinsights",
    "application",
    "apps",
    "azure",
    "azure-deploy",
    "azure-observability",
    "bicep",
    "cli",
    "container",
    "creating",
    "dashboards",
    "data",
    "deploying",
    "diagnostics",
    "distributed",
    "enable",
    "exceptions",
    "insights",
    "instrument",
    "instrumentation",
    "logs",
    "monitoring",
    "observability",
    "querying",
    "requests",
    "send",
    "telemetry",
    "tracing",
    "track",
    "webapp",
  ],
  "name": "appinsights-instrumentation",
}
`;

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "alerts",
  "app service",
  "appinsights",
  "application",
  "apps",
  "azure",
  "azure-deploy",
  "azure-observability",
  "bicep",
  "cli",
  "container",
  "creating",
  "dashboards",
  "data",
  "deploying",
  "diagnostics",
  "distributed",
  "enable",
  "exceptions",
  "insights",
  "instrument",
  "instrumentation",
  "logs",
  "monitoring",
  "observability",
  "querying",
  "requests",
  "send",
  "telemetry",
  "tracing",
  "track",
  "webapp",
]
`;
